bevy_asset_loader/tests/ui_with_2d_3d_features/missing_texture_atlas_attributes.stderr
error: Field is missing asset attributes: texture_atlas/tile_size_x, texture_atlas/tile_size_y, texture_atlas/rows
 --> tests/ui_with_2d_3d_features/missing_texture_atlas_attributes.rs:8:5
  |
8 | /     #[asset(texture_atlas(columns = 2))]
9 | |     test: Handle<TextureAtlasLayout>
  | |____________________________________^
